@@ -24,6 +24,10 @@ the OS chroot syscall.
 .B GID
 Numerical group ID number to change to at program startup.
 .TP
+.B GIDS
+Optional comma-seperated list of numerical group IDs to set up as the
+supplementary group IDs.
+.TP
 .B GROUP
 Group name to use in long listings for files owned by
 .BR $GID .
